--- a/TODO
+++ b/TODO
@@ -2,3 +2,6 @@
 
 - add generic checks for repeated payload headers
 
+- MStack: only throw InvalidAuthEx if at least one method did so,
+	else just a MAHE
+
